# claude-code-redact

./: .gitignore  README.md  pyproject.toml
docs/: api-proxy-approach.md  architecture-decisions.md  claude-hooks-api.md  github-issue-claude-code-api-hooks.md  github-issue-opencode-api-hooks.md  limitations.md  mapping-cache.md  platform-comparison.md  secret-detection.md  threat-model.md
hooks/: rdx-hook.sh
playground/: .redaction_rules  TASKS.md
playground/fixtures/: api_request_bash_output.json  api_request_fix_sql.json  api_request_read_file.json  api_request_with_custom_tokens.json  api_response_analysis.json  api_response_fix_sql.json
playground/src/: billing.py  config.py  user_service.py
playground/tests/: test_user_service.py
scripts/: test_proxy.py  test_redaction_demo.py
src/rdx/: cli.py  discover.py  init.py
src/rdx/audit/: logger.py
src/rdx/core/: mappings.py  models.py  redactor.py  (+3 more)
tests/: test_audit.py  test_cli.py  test_discover.py  test_init.py  test_integration_redaction.py  test_performance.py  test_rdx_md.py  test_setup.py
tests/core/: test_mappings.py  test_redactor.py  test_redactor_detection.py  test_rules.py  test_scanner.py  test_unredactor.py
tests/detect/: test_context.py  test_entropy.py  test_patterns.py  test_presidio.py
tests/fixtures/: edge_cases.txt  fake_config.py  fake_env  mixed_code.js  tricky_false_positives.py
tests/hooks/: test_hook.py  test_rewrite.py  test_shadow.py
tests/proxy/: test_handler.py  test_hardening.py  test_stream.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
(+12 files in other folders)
