[project]
name = "claude-code-redact"
version = "0.1.0"
description = "Redaction proxy for AI coding tools — prevent secrets from leaving your machine"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
nlp = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "basedpyright>=1.0",
    "types-PyYAML",
]

[project.scripts]
rdx = "rdx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdx"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
